[package]
name = "arspaint"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", default-features = false, features = ["image"] }
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "bmp"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
bytemuck = "1.16"
rfd = "0.15"

[profile.release]
opt-level = 3
lto = false
panic = "abort"
